--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ DATABASE_URL="mongodb+srv://mohsin:mohsin@cluster0.iauaztt.mongodb.net/?retryWri
 TIME_ZONE="Asia/Kolkata"
 REMOVE_BG_KEY="yepeTQaFk7r9ymusihgXYvdN"
 ELEVENLAB_API_KEY="0cdb1aed858329b9793413672094ce0d"
-MODE="private"
+MODE="public"
 PREFIX = .
 WARN_COUNT = 3
 DISABLE_PM = "false"
